# overthinkin

./: Makefile  README.md
check-sed-mtime/: .gitignore  Makefile  README.md  check_sed_mtime.c  check_sed_mtime.sh
display-test/: Makefile  README.md  display-test.bundle  main.c
hook-wl-signal/: README.md  hook-wl-signal.c
im-wl-protocol/: README.md  client.c  im-chat-v1.xml  meson.build  server.c
jump-or-exec/: README.md  jump-or-exec.c  meson.build
keyi-sudo/: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  SKILL.md  keyi.bash  keyi.c  test.bats  test.c
keyi-sudo/t/: prefix.exp  prefix.orig
keyi-sudo/tests/: Makefile  integration.bats  unit-test.c
keyi-sudo/tests/fixtures/: append.exp  delete-first.orig  delete-last.orig  keyi  replace.exp  replace.orig
lua-keybind/: README.md  key.lua  main.c  meson.build
mac-snd-info/: AudioDeviceInfo.swift  README.md
mkdot/: .gitignore  Makefile  README.md  mkdot.c
mkdot/t/: test.bats
pipewire-suspend/: README.md  pipewire-suspend.sh  prepare-listener.sh
pipewire-xrun/: main.c  meson.build
pulse-monitor/: README.md  main.c  meson.build  pulse-monitor.service
resize-test/: Makefile  README.md
switch-pulse/: Makefile  switch-pulse.sh
wayland-registry-oom/: Makefile  README.md  make.sh  oom.c
wm-resize-test/: .gitignore  Makefile
